# Lexicon

./: .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  __init__.py  config.py  deps.py  main.py  repository.py  service.py  storage.py
.deploy/: compliance-platform-1.0.0.tgz  index.yaml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/DISCUSSIONS/: README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cd-deploy.yml  chaos-test.yml  ci-main.yml  ci-pr.yml  helm-release.yml  ml-retrain.yml  multi-cluster-deploy.yml  publish-helm-chart.yml  release-service.yml  security-advisory.yml  security-scan.yml
.well-known/: security.txt
chaos/: README.md
chaos/experiments/: network-loss.yaml  node-drain.yaml  pod-delete.yaml  pod-network-loss.yaml
chaos/production/: README.md  production-network-loss.yaml  production-pod-delete.yaml
deploy/argo-rollouts/: intake-gateway-rollout.yaml
deploy/falco/: lexicon-rules.yaml  (+1 more)
docs/: deployment.md  incident-management.md
domain/: document.py
scripts/: bootstrap-env.sh  run-migrations.sh  seed-demo-data.py  smoke-test.sh
services/analytics-engine/: Dockerfile  pyproject.toml
services/analytics-engine/src/analytics_engine/: config.py  main.py
services/audit-ledger/: .env.example  Dockerfile  pyproject.toml
services/audit-ledger/migrations/alembic/: env.py
services/audit-ledger/migrations/alembic/versions/: 001_initial.py
services/audit-ledger/src/audit_ledger/: api.py  blockchain.py  config.py  deps.py  main.py  models.py  repository.py  service.py
services/audit-ledger/tests/: test_audit.py
services/compliance-engine/: .env.example  Dockerfile  pyproject.toml
services/compliance-engine/plugins/: example_plugin.py
services/compliance-engine/src/compliance_engine/: config.py  consumer.py  engine.py  main.py  rego.py  service.py
services/compliance-engine/src/compliance_engine/rules/: __init__.py  aml.py  api.py  completeness.py
services/compliance-engine/tests/: test_compliance.py
services/cost-monitor/: Dockerfile  pyproject.toml
services/cost-monitor/src/cost_monitor/: main.py
services/document-classifier/: .env.example  Dockerfile  pyproject.toml
services/document-classifier/models/: README.md  classifier_model.pkl
services/document-classifier/src/document_classifier/: classifier.py  config.py  main.py  service.py
services/document-classifier/tests/: test_classifier.py
services/ebpf-agent/: Dockerfile  pyproject.toml
services/ebpf-agent/ebpf/: tcp_trace.c
services/ebpf-agent/src/ebpf_agent/: main.py
services/edge-agent/: Dockerfile  pyproject.toml
services/edge-agent/src/edge_agent/: main.py
services/external-gateway/: Dockerfile  pyproject.toml
services/external-gateway/src/external_gateway/: main.py
services/federation-gateway/: Dockerfile  pyproject.toml
services/federation-gateway/src/federation_gateway/: main.py  resolvers.py  schema.py
services/fl-coordinator/: Dockerfile  pyproject.toml
services/fl-coordinator/src/fl_coordinator/: main.py
services/fraud-detection/: .env.example  Dockerfile  pyproject.toml
services/fraud-detection/src/fraud_detection/: ab_router.py  config.py  ensemble.py  fl_client.py  main.py  service.py
services/fraud-detection/tests/: test_fraud.py
services/infra-controller/: Dockerfile  pyproject.toml
services/infra-controller/src/infra_controller/: main.py
services/intake-gateway/: Dockerfile  pyproject.toml  repository.py  service.py  storage.py
services/intake-gateway/domain/: document.py
services/intake-gateway/migrations/alembic/: env.py
services/intake-gateway/migrations/alembic/versions/: 001_initial.py
services/intake-gateway/src/: api.py  deps.py  main.py
services/intake-gateway/src/intake-gateway/: api.py  config.py  deps.py  main.py  repository.py  service.py  storage.py
services/intake-gateway/src/intake-gateway/domain/: document.py
services/intake-gateway/src/intake_gateway/: __init__.py  api.py  config.py  deps.py  main.py  metrics.py  repository.py  service.py  storage.py
services/intake-gateway/src/intake_gateway/auth/: auth.py
services/intake-gateway/src/intake_gateway/domain/: document.py
services/nlp-assistant/: Dockerfile  pyproject.toml
services/nlp-assistant/src/nlp_assistant/: main.py
services/notification-orchestrator/: .env.example  Dockerfile  pyproject.toml
services/notification-orchestrator/src/notification_orchestrator/: config.py  consumer.py  main.py  service.py
services/ocr-pipeline/: Dockerfile  pyproject.toml
services/ocr-pipeline/src/ocr_pipeline/: config.py  consumer.py  engine.py  main.py  service.py
services/ocr-pipeline/src/ocr_pipeline/tests/: test_ocr.py
services/openfeature-service/: Dockerfile  pyproject.toml
services/openfeature-service/src/openfeature_service/: main.py
services/operator/: Dockerfile  pyproject.toml
services/operator/src/operator/: main.py
services/pdf-generator/: Dockerfile  pyproject.toml
services/pdf-generator/src/pdf_generator/: main.py
services/predictive-maintenance/: Dockerfile  pyproject.toml
services/predictive-maintenance/src/predictive_maintenance/: main.py  predictor.py
services/predictive-scaler/: Dockerfile  pyproject.toml
services/predictive-scaler/src/predictive_scaler/: main.py  predictor.py
services/reasoning-service/: .env.example  Dockerfile  pyproject.toml
services/reasoning-service/src/reasoning_service/: config.py  llm_client.py  main.py  service.py
services/reasoning-service/tests/: test_reasoning.py
services/review-workbench/: .env.example  Dockerfile  pyproject.toml
services/review-workbench/src/review_workbench/: api.py  config.py  deps.py  main.py  models.py  repository.py  service.py
services/sandbox-executor/: Dockerfile  pyproject.toml
services/sandbox-executor/src/sandbox_executor/: main.py
services/self-healing-operator/: Dockerfile  pyproject.toml
services/self-healing-operator/src/self_healing_operator/: main.py
terraform/: README.md  main.tf  outputs.tf
(+121 files in other folders)
