[tool.poetry]
name = "analytics-engine"
version = "0.1.0"
description = "OLAP analytics service for Lexicon"
authors = ["Lexicon Team"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115"
uvicorn = "^0.30"
psycopg2-binary = "^2.9"
pandas = "^2.2"
duckdb = "^1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
