[tool.poetry]
name = "compliance-engine"
version = "1.5.0"
description = "Regulatory compliance rule engine"
authors = ["Compliance Team <compliance@regulator.internal>"]

[tool.poetry.dependencies]
pydantic-settings = "^2.0"
python = "^3.12"
aiokafka = "^0.14"
compliance-sdk = { path = "../../packages/compliance-sdk" }
httpx = "^0.27"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-asyncio = "^0.23"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

