[tool.poetry]
name = "ebpf-agent"
version = "0.1.0"
description = "eBPF observability agent for Lexicon"
authors = ["Lexicon Team"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115"
uvicorn = "^0.30"
bcc = "^0.31"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
