[tool.poetry]
name = "federation-gateway"
version = "0.1.0"
description = "GraphQL Federation Gateway for Lexicon"
authors = ["Lexicon Team"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115"
uvicorn = "^0.30"
strawberry-graphql = {extras = ["fastapi"], version = "^0.200"}
httpx = "^0.27"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
