[tool.poetry]
name = "fraud-detection"
version = "1.1.0"
description = "Fraud detection ensemble service"
authors = ["ML Team <ml@regulator.internal>"]

[tool.poetry.dependencies]
pydantic-settings = "^2.0"
python = "^3.12"
scikit-learn = "^1.4"
numpy = "^1.26"
aiokafka = "^0.14"
compliance-sdk = { path = "../../packages/compliance-sdk" }

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-asyncio = "^0.23"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


