[tool.poetry]
name = "infra-controller"
version = "0.1.0"
description = "Crossplane-based infrastructure controller for Lexicon"
authors = ["Lexicon Team"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115"
uvicorn = "^0.30"
kubernetes = "^28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
