[tool.poetry]
name = "intake-gateway"
version = "2.5.1"
description = "Document ingestion gateway"
authors = ["Ingestion Team <ingestion@regulator.internal>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111"
uvicorn = "^0.29"
aiokafka = "^0.14"
asyncpg = "^0.29"
sqlalchemy = {extras = ["asyncio"], version = "^2.0"}
alembic = "^1.13"
compliance-sdk = { path = "../../packages/compliance-sdk" }
pydantic = "^2.7"
python-multipart = "^0.0.9"
minio = "^7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"




