[tool.poetry]
name = "nlp-assistant"
version = "0.1.0"
description = "NLP assistant for Lexicon using LLM"
authors = ["Lexicon Team"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115"
uvicorn = "^0.30"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
