[tool.poetry]
name = "notification-orchestrator"
version = "1.0.0"
description = "Notification dispatch service"
authors = ["Platform Team <platform@regulator.internal>"]

[tool.poetry.dependencies]
pydantic-settings = "^2.0"
python = "^3.12"
httpx = "^0.27"
aiokafka = "^0.14"
compliance-sdk = { path = "../../packages/compliance-sdk" }

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-asyncio = "^0.23"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


