[tool.poetry]
name = "pdf-generator"
version = "0.1.0"
description = "PDF report generator for Lexicon"
authors = ["Lexicon Team"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115"
uvicorn = "^0.30"
weasyprint = "^62.0"
jinja2 = "^3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
