[tool.poetry]
name = "predictive-maintenance"
version = "0.1.0"
description = "ML service for predicting system failures"
authors = ["Lexicon Team"]

[tool.poetry.dependencies]
httpx = "^0.27"
python = "^3.12"
fastapi = "^0.115"
uvicorn = "^0.30"
scikit-learn = "^1.5"
prometheus-client = "^0.20"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
