[tool.poetry]
name = "predictive-scaler"
version = "0.1.0"
description = "AI-driven predictive autoscaling for Lexicon"
authors = ["Lexicon Team"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115"
uvicorn = "^0.30"
httpx = "^0.27"
scikit-learn = "^1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
