[tool.poetry]
name = "reasoning-service"
version = "1.0.0"
description = "LLM reasoning service for compliance"
authors = ["AI Team <ai@regulator.internal>"]

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.27"
jinja2 = "^3.1"
aiokafka = "^0.8"
compliance-sdk = { path = "../../packages/compliance-sdk" }

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-asyncio = "^0.23"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"