[tool.poetry]
name = "review-workbench"
version = "1.2.0"
description = "Human review workflow service"
authors = ["Review Team <review@regulator.internal>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111"
uvicorn = "^0.29"
asyncpg = "^0.29"
compliance-sdk = { path = "../../packages/compliance-sdk" }

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-asyncio = "^0.23"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
