[tool.poetry]
name = "sandbox-executor"
version = "0.1.0"
description = "Secure sandbox for user-defined scripts"
authors = ["Lexicon Team"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115"
uvicorn = "^0.30"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
