[tool.poetry]
name = "self-healing-operator"
version = "0.1.0"
description = "Self-healing operator for Lexicon services"
authors = ["Lexicon Team"]

[tool.poetry.dependencies]
python = "^3.12"
kopf = "^1.37"
kubernetes = "^28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
